@@ -1,8 +1,11 @@
 0.95	ADDED - You can add a 'tag' to a SCALE line, to be used in ICON or LABELs later.
         ADDED - USEICONSCALE - colorize icon images (based on patches from llow)
-	FIXED - KEYOUTLINECOLOR is actually used now (thanks again to llow)
         ADDED - a basic 'live view' function which generates a map on demand.
+	ADDED - improved data-source picker in editor: host filter
+	ADDED - improved data-source picker in editor: option to aggregate data sources
+	FIXED - KEYOUTLINECOLOR is actually used now (thanks again to llow)
 	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
+	FIXED - Data-source picker doesn't restrict scrolling or resizing anymore
 
 0.941	FIXED - Issue with '-' DS names again.
 	FIXED - Added extra code to help discourage browser caching.
